# TinyCompiler

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh
docs/: grammar.txt
libs/finite_automata/: DFA.ixx
libs/fsm/: fsm.ixx  vocabulary.ixx
libs/trie/: compression_table.ixx  trie.ixx
src/: formatters.cpp  main.cpp  my_module.cppm
src/codegen/: codegen.ixx
src/diagnostics/: diagnostics.ixx
src/driver/: driver.ixx
src/exceptions/: exceptions.ixx  parser_exception.ixx
src/interfaces/: I_ast_visitor.ixx  I_tokenizer.ixx
src/parser/: annotations.ixx  ast.ixx  nodes.ixx  parser.ixx
src/semantics/: cfg_checker.ixx  operation_categorires.ixx  type_checker.ixx  type_system.ixx  visibility_checker.ixx
src/tokenizer/: grammar.ixx  parsing_dfa.ixx  position.ixx  token.ixx  tokenizer.ixx
src/utils/: ast_printer.ixx  unescape.ixx
tests/: example1.c  example10.c  example2.c  example3.c  example4.c  example5.c  example7.c  example8.c  example9.c  example_expressions.c  example_expressions_2.c  example_functions.c  example_statements.c
tests/basic/: calculation.c  if_while.c  return.c
tests/programs/: collatz.c  variadic_function.c
